--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sysDarkBlue">#173042</color>
+    <color name="sysLightBlue">#236477</color>
+    <color name="sysLightWhiteBlue">#cfdfda</color>
+    <color name="sysLightGreen">#7cad3e</color>
+    <color name="sysDarkGreen">#4a6c2f</color>
+
 </resources>
+
