--- a/app/src/main/res/color/button_background_color.xml
+++ b/app/src/main/res/color/button_background_color.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--When Button is not enabled -->
-    <item android:state_enabled="false" android:color="#b6b7b5" />
+<!--    <item android:state_enabled="false" android:color="#b6b7b5" />-->
     <!--When Button is in pressed state -->
     <item android:state_pressed="true" android:color="@color/sysDarkBlue" />
     <!--When Button is in selected state -->
-    <item android:state_selected="true" android:color="#fabcff" />
+<!--    <item android:state_selected="true" android:color="#fabcff" />-->
     <!--Default Background Color -->
-    <item android:color="@color/sysLightBlue" />
+    <item android:color="@color/sysDarkBlue" />
 
 </selector>
