Update Component ID

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,21 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#cfdfda"
-    tools:context=".ForgetPasswordPopUp">
+    tools:context=".ForgetPassword">
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView3"
         android:layout_width="29dp"
         android:layout_height="27dp"
         android:contentDescription="@string/todo"
-        android:src="@drawable/password_logo"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
         app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
         app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2"
-        app:layout_constraintVertical_bias="0.48000002" />
+        app:srcCompat="@drawable/mail_logo" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
