--- a/app/src/main/res/layout/activity_loading_screen.xml
+++ b/app/src/main/res/layout/activity_loading_screen.xml
@@ -9,7 +9,7 @@
     tools:context=".LoadingScreen">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/logoImageLoadingPage"
         android:layout_width="0dp"
         android:layout_height="304dp"
         android:layout_marginStart="10dp"
