--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -10,72 +10,58 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:layout_marginTop="76dp"
         android:contentDescription="@string/todo"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/firstNameSignUpPage"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/identity_logo" />
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="353dp"
         android:contentDescription="@string/todo"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintEnd_toStartOf="@+id/passwordSignUpPage"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/password_logo" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="170dp"
         android:contentDescription="@string/todo"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/usernameSignUpPage"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/person_logo" />
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="441dp"
         android:contentDescription="@string/todo"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintEnd_toStartOf="@+id/reconfirmPasswordSignUpPage"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/password_logo" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="262dp"
         android:contentDescription="@string/todo"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/emailSignUpPage"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/mail_logo" />
 
     <EditText
         android:id="@+id/firstNameSignUpPage"
         android:layout_width="130dp"
         android:layout_height="40dp"
-        android:layout_marginStart="90dp"
         android:layout_marginTop="76dp"
         android:autofillHints=""
         android:backgroundTint="@color/sysLightBlue"
@@ -85,14 +71,15 @@
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/lastNameSignUpPage"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/lastNameSignUpPage"
-        android:layout_width="150dp"
+        android:layout_width="170dp"
         android:layout_height="40dp"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="76dp"
         android:autofillHints=""
         android:backgroundTint="@color/sysLightBlue"
@@ -103,16 +90,13 @@
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toEndOf="@+id/firstNameSignUpPage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/usernameSignUpPage"
-        android:layout_width="290dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="172dp"
+        android:layout_width="300dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="175dp"
         android:autofillHints=""
         android:backgroundTint="@color/sysLightBlue"
         android:ems="10"
@@ -122,16 +106,15 @@
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/emailSignUpPage"
-        android:layout_width="290dp"
+        android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="260dp"
         android:autofillHints=""
         android:backgroundTint="@color/sysLightBlue"
         android:ems="10"
@@ -141,16 +124,15 @@
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameSignUpPage" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/reconfirmPasswordSignUpPage"
-        android:layout_width="290dp"
+        android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="442dp"
         android:autofillHints=""
         android:backgroundTint="@color/sysLightBlue"
         android:ems="10"
@@ -160,16 +142,15 @@
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpPage" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/passwordSignUpPage"
-        android:layout_width="290dp"
+        android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="353dp"
         android:autofillHints=""
         android:backgroundTint="@color/sysLightBlue"
         android:ems="10"
@@ -179,9 +160,9 @@
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailSignUpPage" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewSignUpPage"
@@ -203,7 +184,7 @@
         android:layout_marginTop="28dp"
         android:backgroundTint="@color/button_background_color"
         android:fontFamily="@font/roboto"
-        android:text="Sign Up"
+        android:text="@string/signUp"
         android:textSize="24sp"
         app:cornerRadius="9dp"
         app:layout_constraintEnd_toEndOf="parent"
