--- a/app/src/main/res/layout/botton_sheet_layout.xml
+++ b/app/src/main/res/layout/botton_sheet_layout.xml
@@ -21,26 +21,29 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="116dp"
             android:text="Button"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="159dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="172dp"
+            android:layout_marginEnd="141dp"
             android:text="Button"
-            app:layout_constraintTop_toBottomOf="@+id/button4"
-            tools:layout_editor_absoluteX="177dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button4" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="148dp"
             android:layout_marginTop="200dp"
             android:text="Button"
-            app:layout_constraintTop_toBottomOf="@+id/button5"
-            tools:layout_editor_absoluteX="148dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
