--- a/app/src/main/res/layout/botton_sheet_layout.xml
+++ b/app/src/main/res/layout/botton_sheet_layout.xml
@@ -29,7 +29,7 @@
                 android:layout_height="match_parent">
 
                 <ImageButton
-                    android:id="@+id/imageButton"
+                    android:id="@+id/imageHome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/todo"
@@ -38,7 +38,7 @@
                     />
 
                 <ImageButton
-                    android:id="@+id/imageButton2"
+                    android:id="@+id/imageManage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/todo"
@@ -52,7 +52,7 @@
                 android:layout_height="match_parent">
 
                 <ImageButton
-                    android:id="@+id/imageButton3"
+                    android:id="@+id/imageStat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/todo"
@@ -61,7 +61,7 @@
                     android:layout_marginTop="70dp"/>
 
                 <ImageButton
-                    android:id="@+id/imageButton4"
+                    android:id="@+id/imageSettings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/todo"
@@ -74,7 +74,7 @@
         </TableLayout>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonLogOut"
             android:layout_width="291dp"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
@@ -94,7 +94,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/buttonLogOut" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
