--- a/app/src/main/res/color/button_text_color.xml
+++ b/app/src/main/res/color/button_text_color.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!--When the button is not enabled-->
-    <item android:state_enabled="false" android:color="@color/sysDarkBlue" />
+    <item android:color="@color/sysDarkBlue" android:state_enabled="false" />
     <!--When button is enabled-->
-    <item android:state_selected="true" android:color="@color/sysDarkBlue" />
+    <item android:color="@color/sysDarkBlue" android:state_selected="true" />
     <!--When Button is in pressed state -->
-    <item android:state_pressed="true" android:color="@color/sysDarkBlue"/>
+    <item android:color="@color/sysDarkBlue" android:state_pressed="true" />
 
     <!--Default Text Color-->
     <item android:color="@color/sysLightBlue" />
