--- a/app/src/main/res/drawable/bottom_sheet_bg.xml
+++ b/app/src/main/res/drawable/bottom_sheet_bg.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/sysLightWhiteBlue"/>
-    <corners android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
+    <solid android:color="@color/sysLightWhiteBlue" />
+    <corners
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp" />
 
 </shape>
