--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -41,7 +41,7 @@
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginTop="208dp"
-        android:backgroundTint="@color/button_background_color"
+        android:background="@drawable/search_icon_bg"
         android:fontFamily="@font/roboto"
         android:text="@string/send_code_number"
         android:textSize="24sp"
@@ -72,7 +72,7 @@
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginTop="420dp"
-        android:backgroundTint="@color/button_background_color"
+        android:background="@drawable/search_icon_bg"
         android:fontFamily="@font/roboto"
         android:text="@string/submit"
         android:textSize="24sp"
