--- a/app/src/main/res/layout/activity_sign_in_page.xml
+++ b/app/src/main/res/layout/activity_sign_in_page.xml
@@ -84,11 +84,10 @@
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="@color/button_background_color"
+        android:background="@drawable/search_icon_bg"
         android:fontFamily="@font/roboto"
         android:text="@string/sign_in"
         android:textSize="24sp"
-        app:cornerRadius="9dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
