--- a/app/src/main/res/layout/botton_sheet_layout.xml
+++ b/app/src/main/res/layout/botton_sheet_layout.xml
@@ -76,7 +76,11 @@
             android:layout_width="291dp"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
+            android:background="@drawable/search_icon_bg"
+            android:fontFamily="@font/roboto"
             android:text="@string/log_out"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
